# gen-code

./: .env  .gitignore  Cargo.toml  README.md  db.sql  gen-code
src/: gen.rs  lib.rs  main.rs  table.rs
templates/: Controller.java  Dao.java  Entity.java  Service.java  ServiceImpl.java  index.vue
