[package]
name = "gen-code"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
handlebars = "5.1.2"
once_cell = "1.19.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "chrono",
] }
tokio = { version = "1.38.0", features = ["full"] }
